--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1;url=https://bloggify.org">
-        <script type="text/javascript">
-            window.location.href = "https://bloggify.org"
-        </script>
-        <title>Page Redirection</title>
+        <title>Bloggify</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-        If you are not redirected automatically, follow the <a href='https://bloggify.org'>link to Bloggify</a>
+        <div class="px-auto text-center">
+            <img src="https://bloggify.org/@/bloggify/public/assets/mascot/beky.png">
+            <a class="btn btn-warning" href='https://bloggify.org'>link to Bloggify</a>
+        </div>
+        <div class="container mt-3">
+            <div class="progress">
+                <div id="pro" class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">90%</div>
+            </div>
+        </div>
+        
+        
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </body>
 </html>
